Removed access keys from Face Recognition YAML and not pushing it to GIT. Also Added API-Gateway service.

--- a/Website/politicalPartyRegister.htm
+++ b/Website/politicalPartyRegister.htm
@@ -130,7 +130,7 @@
     }
 </style> -->
 
-  <script src="PoliticalPartyCaller.js"></script>
+  <script src="politicalPartyRegister_helper.js"></script>
 </head>
 
 <body>
@@ -138,8 +138,8 @@
     <h1>Irish National Election Dashboard</h1>
     <h2>Welcome, [username]</h2>
     <ul>
-      <li><a href="voter_regis.htm">Register Voter</a></li>
-      <li><a href="political_party_regis.htm">Register Party</a></li>
+      <li><a href="voterRegister.htm">Register Voter</a></li>
+      <li><a href="politicalPartyRegister.htm">Register Party</a></li>
       <li><a href="voterVerification.htm">Election</a></li>
     </ul>
     <h2>Register Political Party</h2>
