--- a/Website/voterRegister.htm
+++ b/Website/voterRegister.htm
@@ -138,7 +138,7 @@
 <!-- Flatpickr JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
-<script src="VoterRegisterCaller.js"></script>
+<script src="voterRegister_helper.js"></script>
 
   </head>
   <body>
@@ -146,8 +146,8 @@
       <h1>Irish National Election Dashboard</h1>
       <h2>Welcome, [username]</h2>
     <ul>
-      <li><a href="voter_regis.htm">Register Voter</a></li>
-      <li><a href="political_party_regis.htm">Register Party</a></li>
+      <li><a href="voterRegister.htm">Register Voter</a></li>
+      <li><a href="politicalPartyRegister.htm">Register Party</a></li>
       <li><a href="voterVerification.htm">Election</a></li>
     </ul>
       
